# FF5-Portfolio-Analysis

./: .env.example  .gitignore  Alpaca.m  PortfolioModel.m  README.md  analyzePortfolio.m  buildMex.m  defaultOptimOptions.m  garchSimulate.m  ledoitWolfShrink.m  loadFF5.m  loadOrFetchBars.m  optimBlackLitterman.m  optimCVaR.m  optimFactorBased.m  optimMeanVariance.m  optimRiskParity.m  plotEfficientFrontier.m  plotFactorExposures.m  plotForecastedReturns.m  plotHistoricalDrawdown.m  plotReturnDistributions.m  portfolio_analysis.m  printSummary.m  pyproject.toml  runOptimizer.m
config/: portfolios.yaml
data/: ff5_daily.csv
scripts/: connect_brokerage.py  debug_holdings.py
src/ff5/: config.py  models.py
src/ff5/analytics/: analyze.py  covariance.py  garch.py  regression.py  risk_metrics.py
src/ff5/app/: asset_classification.py  main.py  state.py  theme.py
src/ff5/app/components/: analysis_controls.py  portfolio_editor.py  summary_table.py  tab_individual.py  tab_macro.py  tab_wiki.py
src/ff5/app/figures/: efficient_frontier.py  factor_exposures.py  forecasted_returns.py  historical_drawdown.py  region_pie.py  return_distributions.py  style_box.py
src/ff5/data/: alpaca.py  cache.py  ff5_loader.py  snaptrade_client.py  yfinance_loader.py
src/ff5/optimizers/: black_litterman.py  cvar.py  dispatcher.py  factor_based.py  mean_variance.py  risk_parity.py
