[project]
name = "ff5-portfolio"
version = "0.1.0"
description = "Fama-French 5-Factor portfolio analysis and optimization"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.22",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "arch>=7.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "diskcache>=5.6",
    "yfinance>=0.2.36",
    "snaptrade-python-sdk>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ff5 = "ff5.app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
